--- a/PaginaPrincipal.html
+++ b/PaginaPrincipal.html
@@ -183,6 +183,6 @@
         <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
         <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i>Youtube</a> 
     </div>
-    <script src="/JavaScript/principalJS.js"></script>
+    <script src="./JavaScript/principalJS.js"></script>
 </body>
 </html>
