mejorando apartado informacionP2

--- a/Informacion.html
+++ b/Informacion.html
@@ -13,10 +13,10 @@
         <header>
             <h1>Informate sobre Nosotros</h1>
             <section>
-                <img src="/Recursos/Imagenes-coches/imgsection1.jpg" alt="imagen 1">
-                <img src="/Recursos/Imagenes-coches/imgsection2.jpg" alt="imagen 2">
-                <img src="/Recursos/Imagenes-coches/imgsection3.jpg" alt="imagen 3">
-                <img src="/Recursos/Imagenes-coches/imgsection4.jpg" alt="imagen 4">
+                <img src="./Recursos/Imagenes-coches/imgsection1.jpg" alt="imagen 1">
+                <img src="./Recursos/Imagenes-coches/imgsection2.jpg" alt="imagen 2">
+                <img src="./Recursos/Imagenes-coches/imgsection3.jpg" alt="imagen 3">
+                <img src="./Recursos/Imagenes-coches/imgsection4.jpg" alt="imagen 4">
             </section>
             
             <nav>
