cambiando y agregando fuentes y enlaces

--- a/Contacto.html
+++ b/Contacto.html
@@ -20,14 +20,14 @@
                 <p><strong>OTROS ENLACES: </strong>
                     <span><a href="PaginaPrincipal.html">Pagina Principal |</a></span>
                     <span><a href="Estudios.html" target="_parent">Estudios |</a></span>
-                    <span><a href="Horario.html" target="_parent">Hoario</a></span>
+                    <span><a href="Horario.html" target="_parent">Horario</a></span>
                 </p>
         </nav>
     </header>
 
     <fieldset>
         <legend>Formulario</legend>
-        <form action="borja: borjafernandez880@gmail.com" method="post" enctype="text/plain" id="formulario">
+        <form action="mailto: borjafernandes212@outlook.es" method="post" enctype="text/plain" id="formulario">
             <fieldset>
                 <legend>Datos Personales</legend>
                 <label for="nombre">Nombre:</label> 
