cambiando tamaños de letras y fuentes de informacion

--- a/Informacion.html
+++ b/Informacion.html
@@ -76,10 +76,10 @@
         <h3>Pie de página</h3>
         <footer id="pie">
            
-            <p>Nombre: Borja Fernandes Augusto</p>
-            <p>Curso: 2 Grado Superior</p>
+            <p>Nombre: Borja</p>
+            <P>Apellidos: Fernandes Augusto</P>
+            <p>Curso: 2ºDAW</p>
             <p>Centro: IES TORREVIGIA</p>
-            <p>Fecha actual: 20/10/2023</p>
 
         </footer>
         <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i>Facebook</a> 
