--- a/PaginaPrincipal.html
+++ b/PaginaPrincipal.html
@@ -41,7 +41,7 @@
 
         <div id="contenidoPrincipal">
             <article id="articulo1">
-                <h2>Informacion del Drift</h2>
+                <h2>INFORMACION DEL DRIFT</h2>
                <p>El drifting es una de las subdisciplinas del automovilismo que más rápido está creciendo, ya que los neumáticos humeantes y las alucinantes maniobras de conducción siguen fascinando 
                     a gente de todas las edades. Muchos jóvenes conocerán el drifting por las películas de The Fast and the Furious, pero como deporte de motor, se remonta mucho más atrás que la franquicia 
                     cinematográfica. En esta guía te explicamos todo lo que necesitas saber sobre el drifting.</p>
@@ -54,7 +54,7 @@
            
            <div id="aside">
                <aside id="informacion_adicional">
-                   <h2>Historia del drift</h2>
+                   <h2>HISTORIA DEL DRIFT</h2>
                    <h4>¿Cuándo empezó?</h4>
                    <p>El drifting se remonta a la década de 1980. Sin embargo, se conoce como una técnica de conducción utilizada en otros deportes de motor desde la década de 1950. El drifting 
                        como disciplina única de competición comenzó en Japón con Kunimitsu Takahashi, considerado el "padre del drifting". Takahashi, un antiguo piloto de motos que llegó a competir 
@@ -79,7 +79,7 @@
         </div> 
 
         <div id="contenidosecundario">
-            <h3>Mejores coches para el Drift</h3>
+            <h3>MEJORES COCHES PARA EL DRIFT</h3>
             <article id="articulo2">
 
                <div id="box-imagenPrueba">
@@ -127,7 +127,7 @@
 
         <div id="contenidoExtra">
             <div id="img-y_texto">
-                <h3>Imagenes de los coches utilizados para el drift</h3>
+                <h3>IMAGENES DE LOS COCHES UTILIZADOS PARA EL DRIFT</h3>
             <div class="imagenesex">
 
                 <div class="img_ex">
@@ -173,10 +173,10 @@
         <h3>Pie de página</h3>
         <footer id="pie">
            
-            <p>Nombre: Borja Fernandes Augusto</p>
-            <p>Curso: 2 Grado Superior</p>
+            <p>Nombre: Borja</p>
+            <P>Apellidos: Fernandes Augusto</P>
+            <p>Curso: 2ºDAW</p>
             <p>Centro: IES TORREVIGIA</p>
-            <p>Fecha actual: 20/10/2023</p>
 
         </footer>
         <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i>Facebook</a> 
