implementacion de PHP y juego con JS

--- a/PaginaPrincipal.html
+++ b/PaginaPrincipal.html
@@ -57,7 +57,7 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="Contacto.html" target="_parent">Contacto</a></li>
+                            <li><a class="dropdown-item" href="Contacto.php" target="_parent">Contacto</a></li>
                           </ul>
                         </li>
                         <li class="nav-item dropdown">
