--- a/MotosSport.html
+++ b/MotosSport.html
@@ -18,7 +18,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-            <img src="./Recursos/Imagenes-coches/foto1.jpg" alt="imagenEnMenu" id="imagenEnMenu">
+            <img src="./Recursos/Imagenes-coches/especialcar2.jpg" alt="imagenEnMenu" id="imagenEnMenu">
             <div class="offcanvas-header">
               <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Otras Paginas</h5>
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -45,7 +45,7 @@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
-                    <li><a class="dropdown-item" href="Contacto.html" target="_parent">Contacto</a></li>
+                    <li><a class="dropdown-item" href="Contacto.php" target="_parent">Contacto</a></li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
