haciendo algunas paginas mas responsive para moviles y algunos cambios varios

--- a/JuegoJS.html
+++ b/JuegoJS.html
@@ -8,13 +8,17 @@
 </head>
 <body>
 
+  <div id="contenido">
+
     <div class="quiz" id="quiz-container">
-        <div class="question" id="question-text"></div>
-        <div class="options" id="options-container"></div>
-        <div class="timer" id="timer">Tiempo restante: <span id="time">10</span> segundos</div>
-        <div class="score" id="score">Tienes: <span id="score-value">0</span> Puntos</div>
+      <div class="question" id="question-text"></div>
+      <div class="options" id="options-container"></div>
+      <div class="timer" id="timer">Tiempo restante: <span id="time">10</span> segundos</div>
+      <div class="score" id="score">Tienes: <span id="score-value">0</span> Puntos</div>
     </div>
 
+  </div>
+  
   <script src="JavaScript/juego.js"></script>
 </body>
 </html>
