--- a/Informacion.html
+++ b/Informacion.html
@@ -14,64 +14,64 @@
     <div id="cabezera">
         <header>
 
-            <nav class="navbar navbar-dark fixed-top">
-                <div class="container-fluid">
-                  <button class="navbar-toggler boton-destacado" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-                    <img src="./Recursos/Imagenes-coches/especialcar3.jpg" alt="imagenEnMenu" id="imagenEnMenu">
-                    <div class="offcanvas-header">
-                      <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Enlaces a otras paginas</h5>
-                      <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                      <ul class="navbar-nav justify-content-end flex-grow-1 pe-3"> 
-                        <li class="nav-item dropdown">
+          <nav class="navbar navbar-dark fixed-top">
+              <div class="container-fluid">
+                <button class="navbar-toggler" id="boton-destacado" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                  <img src="./Recursos/Imagenes-coches/especialcar3.jpg" alt="imagenEnMenu" id="imagenEnMenu">
+                  <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Enlaces a otras paginas</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                  </div>
+                  <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3"> 
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Sobre Nosotros
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                          <li><a class="dropdown-item" href="PaginaPrincipal.html" target="_parent">Pagina Principal</a></li>
+                          <li>
+                              <hr class="dropdown-divider">
+                            </li>
+                          <li><a class="dropdown-item" href="Horario.html" target="_parent">Horario</a></li>
+                          <li>
+                            <hr class="dropdown-divider">
+                          </li>
+                          <li><a class="dropdown-item" href="Estudios.html" target="_parent">Estudios</a></li>
+                          <li>
+                              <hr class="dropdown-divider">
+                          </li>
+                          <li><a class="dropdown-item" href="Contacto.php" target="_parent">Contacto</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Sobre Nosotros
+                            Paginas Especiales
                           </a>
                           <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="PaginaPrincipal.html" target="_parent">Pagina Principal</a></li>
+                            <li><a class="dropdown-item" href="#" target="_blank">Seleccion de Vehiculos</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                               </li>
-                            <li><a class="dropdown-item" href="Horario.html" target="_parent">Horario</a></li>
-                            <li>
-                              <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="Estudios.html" target="_parent">Estudios</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="Contacto.php" target="_parent">Contacto</a></li>
+                            <li><a class="dropdown-item" href="MotosSport.html" target="_blank">Moto Sport</a></li>
                           </ul>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Paginas Especiales
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-dark">
-                              <li><a class="dropdown-item" href="#" target="_blank">Seleccion de Vehiculos</a></li>
-                              <li>
-                                  <hr class="dropdown-divider">
-                                </li>
-                              <li><a class="dropdown-item" href="MotosSport.html" target="_blank">Moto Sport</a></li>
-                            </ul>
-                          </li>
-                      </ul>
-                    </div>
+                    </ul>
                   </div>
                 </div>
-            </nav>
+              </div>
+          </nav>
 
-            <h1>Informate sobre Nosotros</h1>
-            <section>
-                <img src="./Recursos/Imagenes-coches/imgsection1.jpg" alt="imagen 1">
-                <img src="./Recursos/Imagenes-coches/imgsection2.jpg" alt="imagen 2">
-                <img src="./Recursos/Imagenes-coches/imgsection3.jpg" alt="imagen 3">
-                <img src="./Recursos/Imagenes-coches/imgsection4.jpg" alt="imagen 4">
-            </section>
+          <h1>Informate sobre Nosotros</h1>
+          <section>
+              <img src="./Recursos/Imagenes-coches/imgsection1.jpg" alt="imagen 1">
+              <img src="./Recursos/Imagenes-coches/imgsection2.jpg" alt="imagen 2">
+              <img src="./Recursos/Imagenes-coches/imgsection3.jpg" alt="imagen 3">
+              <img src="./Recursos/Imagenes-coches/imgsection4.jpg" alt="imagen 4">
+          </section>
 
         </header>
     </div>
@@ -119,10 +119,9 @@
 
         <footer id="pie">
            
-            <p><strong>Nombre: </strong>Borja</p>
-            <P><strong>Apellidos: </strong>Fernandes Augusto</P>
-            <p><strong>Curso: </strong>2ºDAW</p>
-            <p><strong>Centro: </strong>IES TORREVIGIA</p>
+          <p><strong>Nombre: </strong>Borja</p>
+          <P><strong>Apellidos: </strong>Fernandes Augusto</P>
+          <p><strong>Curso: </strong>2ºDAW</p>
 
         </footer>
         <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i>Facebook</a> 
