añadiendo pagina de McLaren

--- a/Estudios.html
+++ b/Estudios.html
@@ -48,7 +48,8 @@
                             <div class="contenidos" id="videos">
                                 <a href="#">Especiales</a>
                                 <div id="submenu">
-                                    <p><a href="MotosSport.html">Motos</a></p>
+                                    <p><a href="MotosSport.html" target="_blank">Motos</a></p>
+                                    <p><a href="McLaren.html" target="_blank">McLaren</a></p>
                                 </div>
                             </div>
 
