Añadiendo PHP y BBDD

--- a/McLaren.html
+++ b/McLaren.html
@@ -15,7 +15,7 @@
 
     <header>
         <span class="anyo">Borja Fernandes Augusto 2022-2024</span>
-        <a href="https://www.mclaren.com/" class="logo" target="_blank"><img src="./Iconos/logo.png" alt="logo"></a>
+        <a href="https://www.mclaren.com/" class="logo" target="_blank"><img src="./Recursos/Iconos/logo.png" alt="logo"></a>
         <a href="#" class="menu" onclick="Menu();"></a>
     </header>
 
@@ -26,7 +26,6 @@
             <li><a href="Informacion.html">Informacion</a></li>
             <li><a href="Estudios.html">Estudios</a></li>
             <li><a href="Horario.html">Horarrio</a></li>
-            <li><a href="Contacto.php">Contacto</a></li>
         </ul>
 
         <div class="lista-video">
