--- a/PaginaPrincipal.html
+++ b/PaginaPrincipal.html
@@ -57,7 +57,11 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="Contacto.php" target="_parent">Contacto</a></li>
+                            <li><a class="dropdown-item" href="./PHP/Contacto.php" target="_parent">Contacto</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="PHP/Pagina-BD.php" target="_parent">Base de Datos</a></li>
                           </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -130,13 +134,24 @@
             <article id="articulo1">
                 <h2>INFORMACION DEL DRIFT</h2>
                <p>El drifting es una de las subdisciplinas del automovilismo que más rápido está creciendo, ya que los neumáticos humeantes y las alucinantes maniobras de conducción siguen fascinando 
-                    a gente de todas las edades. Muchos jóvenes conocerán el drifting por las películas de The Fast and the Furious, pero como deporte de motor, se remonta mucho más atrás que la franquicia 
-                    cinematográfica. En esta guía te explicamos todo lo que necesitas saber sobre el drifting.</p>
-                    <h4>¿Que es el Drifting?</h4>
-                   <p>El drifting es un deporte que se centra en una técnica de conducción particular del mismo nombre, que se ha utilizado en otros deportes de motor conocidos, como el rally y las 
-                        carreras de velocidad, durante muchos años. El drifting consiste en utilizar el sobreviraje para que el vehículo se desplace lateralmente en las curvas. Esto tiene que ocurrir 
-                        a alta velocidad y mientras el conductor mantiene el control total del coche.
-                   </p>
+                a gente de todas las edades. Muchos jóvenes conocerán el drifting por las películas de The Fast and the Furious, pero como deporte de motor, se remonta mucho más atrás que la franquicia 
+                cinematográfica. En esta guía te explicamos todo lo que necesitas saber sobre el drifting.</p>
+                <h4>¿Que es el Drifting?</h4>
+                <p>El drifting es un deporte que se centra en una técnica de conducción particular del mismo nombre, que se ha utilizado en otros deportes de motor conocidos, como el rally y las 
+                    carreras de velocidad, durante muchos años. El drifting consiste en utilizar el sobreviraje para que el vehículo se desplace lateralmente en las curvas. Esto tiene que ocurrir 
+                    a alta velocidad y mientras el conductor mantiene el control total del coche. Como deporte de motor, se convirtió en una disciplina propia a fines de la década de los 1990, 
+                    con pilotos especialmente entrenados, con automóviles preparados para mantener derrapes controlados a altas velocidades y campeonatos en los que no se compite por tiempo 
+                    sino por estilo. La mayoría de coches de drift suelen ser de tracción trasera, pero también pueden ser de tracción integral a las cuatro ruedas.
+                </p>
+                <h4>Técnicas</h4>
+                <p>Los vehículos ideales son los vehículos de tracción trasera aunque también se han utilizado algunos de tracción delantera y vehículos de tracción integral. 
+                Mitsubishi Lancer Evolution, el Mazda RX-7, el Nissan 350Z, el Toyota Supra MK4, el Nissan Skyline R32 y el Nissan Skyline R34 son algunos de los más utilizados.
+                </p>
+                <h4>Campeonatos de drift</h4>
+                <p>Actualmente el campeonato de drift más importante y conocido es la Formula Drift americano, iniciado en 2004 y que consta de 7 pruebas. Otros campeonatos importantes 
+                son el D1GP japonés o el D1 NZ neozelandés. En Europa son también destacables el King of Europe, el Drift Allstars o el BDC británico. En España existe el campeonato 
+                Open Slalom Drift y en Portugal el CPD. Desde el año 2015 también existe el Campeonato Argentino de Drift GP y en Chile destaca el campeonato Día de la Tracción Trasera.
+                </p>
            </article>
            
            <div id="aside">
