Ultimo cambio para presentarlo

--- a/Cursos.html
+++ b/Cursos.html
@@ -139,21 +139,21 @@
                     <small class="d-block mb-3 text-secondary">2023–2024</small>
                 </div>
                 <div class="col-6 col-md">
-                    <h5 class="text-white">Nombre</h5>
+                    <h5 class="text-white">Datos Personales</h5>
                     <ul class="list-unstyled text-small">
-                        <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Borja</a></li>
-                    </ul>
-                </div>
-                <div class="col-6 col-md">
-                    <h5 class="text-white">Apellido</h5>
-                    <ul class="list-unstyled text-small">
-                        <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Fernandes Augusto</a></li>
+                        <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Borja Fernandes Augusto</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md">
                     <h5 class="text-white">Curso</h5>
                     <ul class="list-unstyled text-small">
-                        <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">2ºDAW</a></li>
+                        <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">2DAW</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-md">
+                    <h5 class="text-white">Fecha Inicio - Fin</h5>
+                    <ul class="list-unstyled text-small">
+                        <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">2023 - 2024</a></li>
                     </ul>
                 </div>
             </div>
