--- a/Footer.html
+++ b/Footer.html
@@ -1,7 +1,7 @@
 <div id="footer">
     <div class="container_footer">
         <footer>
-            <p><strong>Nombre, Apellidos y Curso: </strong>Borja Fernandes Augsto - 2ºDAW</p>
+            <p>Borja Fernandes Augsto - 2ºDAW - 2024</p>
         </footer>
         <a href="https://www.facebook.com" target="_blank">
             <img src="../Recursos/Iconos/facebook.png" alt="Facebook"> Facebook
