--- a/McLaren.html
+++ b/McLaren.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <span class="anyo">Borja Fernandes Augusto 2022-2024</span>
+        <span class="anyo">Distribuidor Autorizado 2022-2024</span>
         <a href="https://www.mclaren.com/" class="logo" target="_blank"><img src="./Recursos/Iconos/logo.png" alt="logo"></a>
         <a href="#" class="menu" onclick="Menu();"></a>
     </header>
@@ -65,9 +65,9 @@
             <h3 class="modelo mclaren-4" style="color: #ff2e00;">765LT</h3>
             <h3 class="modelo mclaren-5" style="color: #bbc0dd;">7505 SPIDER</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit placeat, 
-                hic repellat non incidunt eos natus est officiis qui quae alias aliquam 
-                dicta, maiores commodi magni, reiciendis dolorem in id.
+                Fundado en 1963 por el piloto, ingeniero y empresario Bruce McLaren, 
+                el Grupo está formado por McLaren Automotive, que fabrica a mano supercoches 
+                ligeros, y una participación mayoritaria en McLaren Racing.
             </p>
             <a href="#" id="obtenerMcLaren" onclick="obtenerMcLaren();">Obtener McLaren</a>
         </div>
