cambio de nombres para mejorar estructura

--- a/McLaren.html
+++ b/McLaren.html
@@ -23,7 +23,7 @@
     <div id="banner">
 
         <ul class="nav">
-            <li><a href="./PHP/PaginaPrincipal.php">Pagina Principal</a></li>
+            <li><a href="./PHP/index.php">Pagina Principal</a></li>
             <li><a href="./PHP/Informacion.php">Informacion</a></li>
             <li><a href="Cursos.html">Cursos</a></li>
             <li><a href="./PHP/Drifting.php">¿Drifting?</a></li>
