--- a/Cursos.html
+++ b/Cursos.html
@@ -13,7 +13,7 @@
     <div class="container py-3">
         <header>
             <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-                <a href="./PHP/PaginaPrincipal.php" class="d-flex align-items-center link-body-emphasis text-decoration-none">
+                <a href="./PHP/index.php" class="d-flex align-items-center link-body-emphasis text-decoration-none">
                     <img src="Recursos/Iconos/rueda-de-fuego.png" alt="logo" id="logomarca">
                     <span class="fs-4 text-white">The University of Driving</span>
                 </a>
