--- a/MotosSport.html
+++ b/MotosSport.html
@@ -27,7 +27,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3"> 
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="./PHP/PaginaPrincipal.php">Pagina Principal</a>
+                  <a class="nav-link" aria-current="page" href="./PHP/index.php">Pagina Principal</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
